fix(scss): delete overflow:hidden for buttons to display them on mobiles

--- a/src/scss/08_archive.scss
+++ b/src/scss/08_archive.scss
@@ -291,7 +291,7 @@
   @include flex-center;
   visibility: hidden;
   grid-auto-rows: 100px;
-  background-color: rgba($color: #000, $alpha: 0.5);
+  background-color: rgba($color: #000, $alpha: 0.7);
   position: fixed;
   top: 0;
   left: 0;
@@ -325,12 +325,9 @@
 
   &__button {
     @include flex-center;
-    padding: 2px;
     width: 100%;
     height: 100%;
     fill: #aaa;
-    border-radius: 50%;
-    overflow: hidden;
 
     &:hover {
       fill: #fff;
